@@ -24,7 +24,6 @@ import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtilRt;
 import fi.aalto.cs.apluscourses.intellij.DialogHelper;
-import fi.aalto.cs.apluscourses.intellij.actions.SubmitExerciseAction.Tagger;
 import fi.aalto.cs.apluscourses.intellij.model.ProjectModuleSource;
 import fi.aalto.cs.apluscourses.intellij.notifications.ExerciseNotSelectedNotification;
 import fi.aalto.cs.apluscourses.intellij.notifications.MissingFileNotification;
@@ -36,18 +35,19 @@ import fi.aalto.cs.apluscourses.intellij.notifications.SubmissionSentNotificatio
 import fi.aalto.cs.apluscourses.intellij.services.DefaultGroupIdSetting;
 import fi.aalto.cs.apluscourses.intellij.services.Dialogs;
 import fi.aalto.cs.apluscourses.intellij.services.MainViewModelProvider;
+import fi.aalto.cs.apluscourses.intellij.utils.Interfaces;
 import fi.aalto.cs.apluscourses.model.Authentication;
 import fi.aalto.cs.apluscourses.model.Course;
 import fi.aalto.cs.apluscourses.model.Exercise;
 import fi.aalto.cs.apluscourses.model.ExerciseDataSource;
 import fi.aalto.cs.apluscourses.model.ExerciseGroup;
+import fi.aalto.cs.apluscourses.model.ExercisesTree;
 import fi.aalto.cs.apluscourses.model.FileDoesNotExistException;
 import fi.aalto.cs.apluscourses.model.FileFinder;
 import fi.aalto.cs.apluscourses.model.Group;
 import fi.aalto.cs.apluscourses.model.ModelExtensions;
 import fi.aalto.cs.apluscourses.model.Points;
 import fi.aalto.cs.apluscourses.model.Submission;
-import fi.aalto.cs.apluscourses.model.SubmissionHistory;
 import fi.aalto.cs.apluscourses.model.SubmissionInfo;
 import fi.aalto.cs.apluscourses.model.SubmittableFile;
 import fi.aalto.cs.apluscourses.presentation.CourseViewModel;
@@ -64,6 +64,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.OptionalLong;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Before;
@@ -83,10 +84,8 @@ public class SubmitExerciseActionTest {
   String fileName;
   SubmittableFile file;
   SubmissionInfo submissionInfo;
-  SubmissionHistory submissionHistory;
   MainViewModel mainViewModel;
   CourseViewModel courseViewModel;
-  String token;
   Authentication authentication;
   ExerciseDataSource exerciseDataSource;
   ExercisesTreeViewModel exercises;
@@ -108,9 +107,9 @@ public class SubmitExerciseActionTest {
   AnActionEvent event;
   SubmitExerciseAction action;
   Points points;
-  Tagger tagger;
-  SubmitExerciseAction.DocumentSaver documentSaver;
-  SubmitExerciseAction.LanguageSource languageSource;
+  Interfaces.Tagger tagger;
+  Interfaces.DocumentSaver documentSaver;
+  Interfaces.LanguageSource languageSource;
   DefaultGroupIdSetting defaultGroupIdSetting;
 
   /**
@@ -122,33 +121,32 @@ public class SubmitExerciseActionTest {
   @Before
   public void setUp() throws Exception {
     exerciseId = 12;
-    exercise = new Exercise(exerciseId, "Test exercise", "http://localhost:10000", 0, 0, 0, true);
-    group = new Group(124, Collections.singletonList("Only you"));
-    groups = Collections.singletonList(group);
-    exerciseGroup = new ExerciseGroup(0, "Test EG", "", true, Collections.singletonList(exercise));
-    exerciseGroups = Collections.singletonList(exerciseGroup);
     fileName = "some_file.scala";
     fileKey = "file1";
     file = new SubmittableFile(fileKey, fileName);
     String language = "fi";
-    submissionInfo = new SubmissionInfo(
-        1, Collections.singletonMap(language, Collections.singletonList(file)));
-    submissionHistory = new SubmissionHistory(0);
+    submissionInfo = new SubmissionInfo(Map.of(language, Collections.singletonList(file)));
+    exercise = new Exercise(
+        exerciseId, "Test exercise", "http://localhost:10000", submissionInfo, 0, 0, OptionalLong.empty());
+    group = new Group(124, Collections.singletonList("Only you"));
+    groups = Collections.singletonList(group);
+    exerciseGroup = new ExerciseGroup(0, "Test EG", "", true);
+    exerciseGroup.addExercise(exercise);
+    exerciseGroups = Collections.singletonList(exerciseGroup);
 
     mainViewModel = new MainViewModel(new Options());
 
     authentication = mock(Authentication.class);
-    points = new Points(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap());
+    points = new Points(
+        Collections.emptyMap(),
+        Collections.emptyMap(),
+        Collections.emptyMap());
 
     exerciseDataSource = mock(ExerciseDataSource.class);
     course = spy(new ModelExtensions.TestCourse("91", "NineOne Course", exerciseDataSource));
     doReturn(groups).when(exerciseDataSource).getGroups(course, authentication);
-    doReturn(submissionInfo).when(exerciseDataSource).getSubmissionInfo(exercise, authentication);
-    doReturn(submissionHistory).when(exerciseDataSource)
-        .getSubmissionHistory(exercise, authentication);
     doReturn(points).when(exerciseDataSource).getPoints(course, authentication);
-    doReturn(exerciseGroups).when(exerciseDataSource)
-        .getExerciseGroups(course, points, Collections.emptyMap(), authentication);
+    doReturn(exerciseGroups).when(exerciseDataSource).getExerciseGroups(course, authentication);
     doReturn("http://localhost:1000")
         .when(exerciseDataSource)
         .submit(any(Submission.class), any(Authentication.class));
@@ -156,7 +154,7 @@ public class SubmitExerciseActionTest {
     courseViewModel = new CourseViewModel(course);
     mainViewModel.courseViewModel.set(courseViewModel);
 
-    exercises = new ExercisesTreeViewModel(exerciseGroups, new Options());
+    exercises = new ExercisesTreeViewModel(new ExercisesTree(exerciseGroups), new Options());
     exercises.getChildren().get(0).getChildren().get(0).setSelected(true);
     mainViewModel.exercisesViewModel.set(exercises);
 
@@ -175,7 +173,7 @@ public class SubmitExerciseActionTest {
 
     mainVmProvider = mock(MainViewModelProvider.class);
     doReturn(mainViewModel).when(mainVmProvider).getMainViewModel(project);
-    var authProvider = mock(SubmitExerciseAction.AuthenticationProvider.class);
+    var authProvider = mock(Interfaces.AuthenticationProvider.class);
     doReturn(authentication).when(authProvider).getAuthentication(project);
 
 
@@ -210,11 +208,11 @@ public class SubmitExerciseActionTest {
     submissionDialogFactory = new DialogHelper.Factory<>(submissionDialog, project);
     dialogs.register(SubmissionViewModel.class, submissionDialogFactory);
 
-    tagger = mock(Tagger.class);
+    tagger = mock(Interfaces.Tagger.class);
 
-    documentSaver = mock(SubmitExerciseAction.DocumentSaver.class);
+    documentSaver = mock(Interfaces.DocumentSaver.class);
     
-    languageSource = mock(SubmitExerciseAction.LanguageSource.class);
+    languageSource = mock(Interfaces.LanguageSource.class);
     doReturn(language).when(languageSource).getLanguage(project);
     
     defaultGroupIdSetting = new TestDefaultGroupIdSetting();
@@ -306,9 +304,14 @@ public class SubmitExerciseActionTest {
 
   @Test
   public void testNotifiesExerciseNotSubmittable() throws IOException {
-    doReturn(new SubmissionInfo(1, Collections.emptyMap()))
-        .when(exerciseDataSource)
-        .getSubmissionInfo(exercise, authentication);
+    var exercise = new Exercise(0, "", "", new SubmissionInfo(Map.of()), 0, 0,
+        OptionalLong.empty());
+    var exerciseGroup = new ExerciseGroup(0, "", "", true);
+    exerciseGroup.addExercise(exercise);
+    mainViewModel.exercisesViewModel.set(
+        new ExercisesTreeViewModel(new ExercisesTree(List.of(exerciseGroup)), new Options()));
+    mainViewModel.exercisesViewModel
+        .get().getChildren().get(0).getChildren().get(0).setSelected(true);
 
     action.actionPerformed(event);
 
@@ -322,55 +325,12 @@ public class SubmitExerciseActionTest {
   }
 
   @Test
-  public void testNotifiesOfNetworkErrorWhenGettingSubmissionHistory() throws IOException {
-    IOException exception = new IOException();
-    doThrow(exception).when(exerciseDataSource).getSubmissionHistory(exercise, authentication);
-
-    action.actionPerformed(event);
-
-    verifyNoInteractions(submissionDialog);
-    verify(exerciseDataSource, never()).submit(any(), any());
-
-    ArgumentCaptor<NetworkErrorNotification> notificationArg =
-        ArgumentCaptor.forClass(NetworkErrorNotification.class);
-
-    verify(notifier).notify(notificationArg.capture(), eq(project));
-
-    NetworkErrorNotification notification = notificationArg.getValue();
-    assertSame(exception, notification.getException());
-
-    verifyNoMoreInteractions(notifier);
-  }
-
-  @Test
   public void testNotifiesOfNetworkErrorWhenGettingGroups() throws IOException {
     IOException exception = new IOException();
     doThrow(exception).when(exerciseDataSource).getGroups(course, authentication);
 
     action.actionPerformed(event);
 
-    verifyNoInteractions(submissionDialog);
-    verify(exerciseDataSource, never()).submit(any(), any());
-
-    ArgumentCaptor<NetworkErrorNotification> notificationArg =
-        ArgumentCaptor.forClass(NetworkErrorNotification.class);
-
-    verify(notifier).notify(notificationArg.capture(), eq(project));
-
-    NetworkErrorNotification notification = notificationArg.getValue();
-    assertSame(exception, notification.getException());
-
-    verifyNoMoreInteractions(notifier);
-  }
-
-  @Test
-  public void testNotifiesOfNetworkErrorWhenGettingSubmissionInfo() throws IOException {
-    IOException exception = new IOException();
-    doThrow(exception).when(exerciseDataSource).getSubmissionInfo(exercise, authentication);
-
-    action.actionPerformed(event);
-
-    verifyNoInteractions(moduleSelectionDialog);
     verifyNoInteractions(submissionDialog);
     verify(exerciseDataSource, never()).submit(any(), any());
 
